--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -3,11 +3,13 @@
         <div class="card mx-auto" style="width:500px;">
             <div class="card-header">
                 <img class="card-img-top mx-auto m-2 rounded-circle" src="/img/logo.jpg" alt="Logo" style="width: 150px;height:150px;display:block;">
-                <h3 class="text-uppercase text-center p-4">CRUD con node js y mysql</h3>
+                <h3 class="text-uppercase text-center p-4">CRUD NODE ISB 6IV6 GHEA</h3>
             </div>
             <div class="card-body text-center">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus maiores pariatur at placeat vel quam corporis quod odit itaque illum, non neque, perferendis eveniet cupiditate.</p>
-                <a href="/add" class="btn btn-primary">Crear una persona</a>
+                <p>Este es un CRUD construido con Node.js, MySql y HTML (hsb) para el registro, consulta, actualización y borrado
+                    de productos comerciales a considerar.
+                </p>
+                <a href="/add" class="btn btn-primary">Registrar Producto</a>
             </div>
         </div>
     </div>
