--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CRUD TUTORIAL NODE JS</title>
+    <title>CRUD DE PRODUCTOS CON NODE ISB 6IV6 GHEA</title>
     {{!BOOSTRAP}}
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
